Added Lambda function code (WIP)
