# api.yaml
@@ -15,6 +15,10 @@ definitions:
     properties:
       instance_id:
         type: string
+      server_name:
+        type: string
+      ip:
+        type: string
   InstanceList:
     type: array
     items:
@@ -24,10 +28,21 @@ definitions:
     properties:
       server_name:
         type: string
+      duration:
+        type: integer
+      key_name:
+        type: string
   GeneralResponse:
     type: object
     properties:
       message:
+        type: string
+  MinecraftUser:
+    type: object
+    properties:
+      uuid:
+        type: string
+      username:
         type: string
   Server:
     type: object
@@ -40,17 +55,10 @@ definitions:
         type: string
       world_volume_id:
         type: string
-  NewServer:
-    type: object
-    properties:
-      minecraft_type:
+      eip_id:
         type: string
-      ec2_type:
-        type: string
-      ami_id:
-        type: string
-      world_volume_id:
-        type: string
+      initial_op:
+        $ref: '#/definitions/MinecraftUser'
   ModifyServer:
     type: object
     additionalProperties:
@@ -104,6 +112,7 @@ paths:
               type: string
           schema:
             $ref: '#/definitions/Empty'
+      summary: CORS support
       x-amazon-apigateway-integration:
         passthroughBehavior: NEVER
         responses:
@@ -173,7 +182,7 @@ paths:
         type: string
       - description: Terminate the instance instead of stopping it
         in: header
-        name: Terminate-Instance
+        name: Terminate
         required: false
         type: boolean
       produces:
@@ -194,7 +203,15 @@ paths:
               description: URI that may access the resource
               type: string
           schema:
-            $ref: '#/definitions/Empty'
+            $ref: '#/definitions/GeneralResponse'
+        '404':
+          description: No such instance
+          headers:
+            Access-Control-Allow-Origin:
+              description: URI that may access the resource
+              type: string
+          schema:
+            $ref: '#/definitions/GeneralResponse'
         '500':
           description: Internal error
           headers:
@@ -202,7 +219,7 @@ paths:
               description: URI that may access the resource
               type: string
           schema:
-            $ref: '#/definitions/Empty'
+            $ref: '#/definitions/GeneralResponse'
       summary: Shut down an instance cleanly
       x-amazon-apigateway-integration:
         httpMethod: GET
@@ -248,6 +265,7 @@ paths:
               type: string
           schema:
             $ref: '#/definitions/Empty'
+      summary: CORS support
       x-amazon-apigateway-integration:
         passthroughBehavior: NEVER
         responses:
@@ -301,6 +319,7 @@ paths:
               type: string
           schema:
             $ref: '#/definitions/Empty'
+      summary: CORS support
       x-amazon-apigateway-integration:
         passthroughBehavior: NEVER
         responses:
@@ -321,7 +340,12 @@ paths:
         name: NewServer
         required: true
         schema:
-          $ref: '#/definitions/NewServer'
+          $ref: '#/definitions/Server'
+      - description: The name of the server to create
+        in: path
+        name: serverName
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -370,6 +394,11 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/ModifyServer'
+      - description: The name of the server to modify
+        in: path
+        name: serverName
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -434,7 +463,7 @@ paths:
               description: URI that may access the resource
               type: string
           schema:
-            $ref: '#/definitions/Empty'
+            $ref: '#/definitions/GeneralResponse'
         '500':
           description: Internal error
           headers:
@@ -442,7 +471,7 @@ paths:
               description: URI that may access the resource
               type: string
           schema:
-            $ref: '#/definitions/Empty'
+            $ref: '#/definitions/GeneralResponse'
       summary: Delete a server
       x-amazon-apigateway-integration:
         httpMethod: GET
@@ -483,6 +512,7 @@ paths:
               type: string
           schema:
             $ref: '#/definitions/Empty'
+      summary: CORS support
       x-amazon-apigateway-integration:
         passthroughBehavior: NEVER
         responses:
